k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ehr-backend
  template:
    metadata:
      labels:
        app: ehr-backend
    spec:
      containers:
        - name: backend
          image: yourhubuser/ehr-backend:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
