k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ehr-frontend-service
spec:
  selector:
    app: ehr-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
