k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tutor-orchestrator-service
  namespace: tutor-orchestrator
  labels:
    app: autonomous-tutor-orchestrator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: autonomous-tutor-orchestrator
